--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,8 @@
   </head>
   <body>
     <button id="changeColor"></button>
+    <button id="toggleAlarm">Activate alarm</button>
     <script src="popup.js"></script>
+    <script src="alarm.js"></script>
   </body>
 </html>
