--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" type="text/css" href="popup.css">
     <!-- js -->
-    <script type="text/javascript" src="libs/handlebars-v4.0.5.js"></script>
+    <script type="text/javascript" src="lib/handlebars-3ce4425.js"></script>
     <script type="text/javascript" src="lib/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="libs/moment-with-locales.js"></script>
     <script type="text/javascript" src="header.js"></script>
