installed vue file

--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
     <!-- js -->
     <script type="text/javascript" src="lib/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="libs/material.min.js"></script>
-    <script type="text/javascript" src="https://unpkg.com/vue"></script>
+    <script type="text/javascript" src="/lib/vue.js"></script>
 </head>
 <body>
         <div id="app">
