--- a/popup.html
+++ b/popup.html
@@ -18,13 +18,12 @@
 </head>
 <body>
         <div id="app">
-          <div v-if="newEmailCounter" class="container-fluid">
+          <div v-if="newEmailCounter && logInSalesforce" class="container-fluid">
               <div class="table-responsive">
                 <table class="table table-hover table-dark">
                   <thead>
                       <tr>
-          
-                          <th scope="col">Case Id</th>
+                        <th scope="col">Case Id</th>
                           <th scope="col">Case Status</th>
                           <th scope="col">New Email</th>
                       </tr>
@@ -32,23 +31,27 @@
                   <tbody>
                     <tr v-for="(item,index) in collapsedCases" v-if="item['New Emails']" data-toggle="collapse" data-target="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                       <td>
-                         <button @click='clickCase( item["Case ID"] )' type="button" class="btn btn-secondary btn-sm">{{item["Case Number"]}}</button>
+                         <button @click='clickCase( item["Case ID"],index )' type="button" class="btn btn-secondary btn-sm">{{ item["Case Number"] }}</button>
                       </td>
                       <td>
-                          {{ item["Status"]}}
+                          {{ item["Status"] }}
                       </td>
                       <td>
-                        <span class="badge badge-danger badge-pill"> {{ item["New Emails"]}} </span>
+                        <span class="badge badge-danger badge-pill"> {{ item["New Emails"] }} </span>
                       </td>
                     </tr>
                 </tbody>
                 </table>
               </div>
             </div>
-            <div v-else class="text-center align-middle">
+            <div v-else-if="newEmailCounter == 0 && logInSalesforce" class="text-center align-middle">
                 <p class="no-email top">No new emails</p>  
                 <img class="horizontal-line" src="images/no-email-check.svg">
                 <p class="no-email bottom">You're all caught up!</p> 
+              </div>
+              <div v-else class="text-center align-middle">
+                <a class= "btn btn-outline-light" href="https://login.salesforce.com/?locale=eu" target="_blank">Log in salesforce</a>
+
               </div>
         </div>
         <footer class="page-footer fixed-bottom font-small pt-4">
