fix css and set market parameter in background script

--- a/popup.html
+++ b/popup.html
@@ -73,7 +73,7 @@
               <img class="horizontal-line" src="images/no-email-check.svg">
               <p class="no-email bottom">You're all caught up!</p> 
             </div>
-            <div v-else class="text-center align-middle">
+            <div v-else class="text-center salesforce">
               <a class= "btn btn-outline-light" href="https://login.salesforce.com/?locale=eu" target="_blank">Log in salesforce</a>
             </div>
         </div>
