--- a/popup.html
+++ b/popup.html
@@ -80,6 +80,7 @@
         <footer class="page-footer font-small pt-4">
           <div class="footer-copyright text-center text-white py-3">© 2019 Copyright: S&T Team </div> 
         </footer>
+        <script type="text/javascript" src="lib/jquery.tabletojson.js"></script>
         <script type="text/javascript" src="popup.js"></script>
 
 </body>
