--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="lib/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="lib/tooltip.min.js"></script>
     <script type="text/javascript" src="/lib/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/lib/vue.js"></script>
+    <script type="text/javascript" src="/lib/vue.min.js"></script>
 </head>
 <body>
 
