--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" type="text/css" href="components/EmailTemplate/emailtemplate.css" />
   <link rel="stylesheet" type="text/css" href="components/GhostForce/ghostforce.css" />
   <link rel="stylesheet" type="text/css" href="components/JuniorSme/juniorsme.css" />
+  <link rel="stylesheet" type="text/css" href="components/tagManagerInjector/tagManagerInjector.css" />
 
   <link rel="stylesheet" type="text/css" href="components/newEmail/newemail.css" />
 
@@ -50,19 +51,7 @@
             {{ tab }}
 
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="blog.html">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li> -->
         </ul>
 
 
@@ -85,8 +74,29 @@
   <script src="components/JuniorSme/juniorsme.js"></script>
   <script src="components/KnowledgeBase/knowledgebase.js"></script>
   <script src="components/newEmail/newemail.js"></script>
-
+  <script src="components/tagManagerInjector/tagManagerInjector.js"></script>
   <script type="text/javascript" src="popup.js"></script>
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
