--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap" />
   <link rel="stylesheet" type="text/css" href="lib/bootstrap-4.3.1-dist/css/bootstrap.min.css" />
 
-  <link rel="stylesheet" type="text/css" href="/lib/fontawesome-free-5.9.0-web/css/all.css" />
+  <link rel="stylesheet" type="text/css" href="lib/fontawesome-free-5.9.0-web/css/all.css" />
 
   <!-- main css-->
   <link rel="stylesheet" type="text/css" href="popup.css" />
@@ -24,49 +24,21 @@
   <!-- js -->
 
   <script type="text/javascript" src="lib/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="lib/tooltip.min.js"></script>
-  <script type="text/javascript" src="/lib/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="/lib/vue.min.js"></script>
+  <!--<script type="text/javascript" src="lib/tooltip.min.js"></script>-->
+  <script type="text/javascript" src="lib/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="lib/vue.min.js"></script>
 
 </head>
 
 <body>
   <div id="app">
-    <!-- <nav class="navbar navbar-default navbar-static-top">
-      <li v-for="tab in tabs" v-bind:key="tab"
-        v-bind:class="['tab-button btn btn-outline-light btn-sm', { active: currentTab === tab }]"
-        v-on:click="currentTab = tab">
-        {{ tab }}
-      </li>
-    </nav> -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-
-
-
       <ul class="navbar-nav pl-md-5 ml-auto">
         <li v-for="tab in tabs" v-bind:key="tab" v-bind:class="['nav-item nav-link', { active: currentTab === tab }]"
           v-on:click="currentTab = tab">
           {{ tab }}
         </li>
-        <!-- <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="blog.html">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li> -->
       </ul>
-
-
-
-
     </nav>
 
     <component v-bind:is="currentTabComponent" class="tab"></component>
@@ -78,13 +50,14 @@
     </div>
   </footer>
 
-  <!--Components-->
+  <!--Components js-->
   <script src="components/EmailTemplate/emailtemplate.js"></script>
   <script src="components/GhostForce/ghostforce.js"></script>
   <script src="components/JuniorSme/juniorsme.js"></script>
   <script src="components/KnowledgeBase/knowledgebase.js"></script>
   <script src="components/newEmail/newemail.js"></script>
 
+  <!--Main js -->
   <script type="text/javascript" src="popup.js"></script>
 </body>
 
