--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
   <!-- js -->
 
   <script type="text/javascript" src="lib/jquery-3.4.1.min.js"></script>
-  <!--<script type="text/javascript" src="lib/tooltip.min.js"></script>-->
+  <script type="text/javascript" src="lib/popper.min.js"></script>
   <script type="text/javascript" src="lib/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="lib/vue.min.js"></script>
 
