--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" type="text/css" href="components/GhostForce/ghostforce.css" />
   <link rel="stylesheet" type="text/css" href="components/JuniorSme/juniorsme.css" />
   <link rel="stylesheet" type="text/css" href="components/tagManagerInjector/tagManagerInjector.css" />
-
+  <link rel="stylesheet" type="text/css" href="components/KnowledgeBase/knowledgebase.css"/>
   <link rel="stylesheet" type="text/css" href="components/newEmail/newemail.css" />
 
   <!-- js -->
