work on knowledge base

--- a/popup.html
+++ b/popup.html
@@ -60,7 +60,7 @@
   </div>
   <footer class="page-footer font-small pt-4">
     <div class="footer-copyright text-center text-white py-3">
-      © 2019 Copyright: S&T Team
+      © 2020 Copyright: WebTech Team
     </div>
   </footer>
 
@@ -71,6 +71,7 @@
   <script src="components/KnowledgeBase/knowledgebase.js"></script>
   <script src="components/newEmail/newemail.js"></script>
   <script src="components/tagManagerInjector/tagManagerInjector.js"></script>
+
   <!-- Main js -->
   <script type="text/javascript" src="popup.js"></script>
 </body>
