added tag manager

--- a/popup.html
+++ b/popup.html
@@ -24,6 +24,8 @@
 
   <!-- js -->
 
+  <script type="text/javascript" src="gtm.js"></script>
+
   <script type="text/javascript" src="lib/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="lib/popper.min.js"></script>
   <script type="text/javascript" src="lib/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
@@ -35,6 +37,9 @@
 </head>
 
 <body>
+    <noscript>
+        <iframe src="//www.googletagmanager.com/ns.html?id=GTM-PN8MQMQ" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+      </noscript>
   <div id="app">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
