--- a/popup.html
+++ b/popup.html
@@ -30,18 +30,23 @@
                       </tr>
                   </thead>
                   <tbody>
-                    <tr v-for="(item,index) in collapsedCases" v-if="item['New Emails']" data-toggle="collapse" data-target="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                      <td>
-                         <button @click='clickCase( item["Case ID"],index )' type="button" class="btn btn-secondary btn-sm">{{ item["Case Number"] }}</button>
-                      </td>
-                      <td>
-                          {{ item["Status"] }}
-                      </td>
-                      <td>
-                        <span class="badge badge-danger badge-pill"> {{ item["New Emails"] }} </span>
-                      </td>
-                    </tr>
-                </tbody>
+                    <template v-for="(item,index) in collapsedCases">
+                      <tr v-if="item['New Emails']" data-toggle="collapse" data-target="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                        <td>
+                          <button @click='clickCase( item["Case ID"],index )' type="button" class="btn btn-secondary btn-sm">{{ item["Case Number"] }}</button>
+                        </td>
+                        <td>
+                            {{ item["Status"] }}
+                        </td>
+                        <td>
+                          <span class="badge badge-danger badge-pill"> {{ item["New Emails"] }} </span>
+                        </td>
+                      </tr>
+                      <tr v-for="emails in item['email']">
+                          {{ emails["number"] }}
+                      </tr>
+                    </template>
+                  </tbody>
                 </table>
               </div>
             </div>
